Gateway-service/Service-Gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: gateway-service
